--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,6 @@
-@import 'node_modules/bootstrap/scss/bootstrap.scss';
-@import 'node_modules/bootstrap-vue/src/index.scss';
+@import '../node_modules/bootstrap/scss/bootstrap.scss';
+@import '../node_modules/bootstrap-vue/src/index.scss';
 
+// .navi {
+//     background-color: blue;
+// }
